Removed references to deprecated APIs / fixed deprecation warnings in test code